# calendario

./: .gitignore  mise.toml  pyproject.toml  requirements.txt
calendario/: main.py
calendario/builders/: calendar.py  holidays.py  week.py  weekends.py
calendario/config/: settings.py
calendario/domain/: models.py  types.py
calendario/io/: exporters.py  visualization.py
calendario/validation/: constraints.py  validate.py
examples/: usage.py
